# Fastapi-redis-skeleton

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/api_v1/: api.py  customer.py
app/models/: customer.py
app/tests/: conftest.py  test_main.py
app/tests/api/: test_customer.py
app/utils/: config.py
data/: appendonly.aof  dump.rdb
