[tool.poetry]
name = "fastapi-redis-skeleton"
version = "0.1.0"
description = "A Skeleton Fastapi app that has a Redis Db & Redis Insight"
authors = ["Matthew Aylward <matthewtyleraylward@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
redis-om = "^0.0.17"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.8"}
pydantic = {extras = ["email"], version = "^1.9.0"}
aioredis = "^2.0.1"
uvicorn = "^0.17.6"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
